--- a/jobs/templates/jobs/employer_jobs.html
+++ b/jobs/templates/jobs/employer_jobs.html
@@ -21,6 +21,8 @@
                         <p class="text-sm text-gray-500">{{ job.location }}</p>
                         <p class="text-sm text-gray-600 mt-2">
                             <span class="font-medium text-indigo-600">{{ job.application_set.count }}</span> applicant{{ job.application_set.count|pluralize }}
+                            &bull;
+                            <span class="font-medium text-green-600">{{ job.vacancies }}</span> vacanc{{ job.vacancies|pluralize:"y,ies" }}
                         </p>
                     </div>
                     <div class="flex items-center gap-4 flex-shrink-0">
@@ -40,3 +42,4 @@
     </div>
 </div>
 {% endblock %}
+
